--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   </head>
   <body>
     <h1>Hello, world!</h1>
+    <h1>Welcome to Wertigo!</h1>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
