--- a/discover.html
+++ b/discover.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <title> Wertigo - Contact Us</title>
+    <title> Wertigo - Discover</title>
   </head>
   <body>
       
@@ -24,8 +24,8 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <div class="navbar-nav">
                   <a class="nav-link" href="index.html">Home</a>
-                  <a class="nav-link" href="discover.html">Discover</a>
-                  <a class="nav-link active" aria-current="page" href="contactus.html">Contact Us</a>
+                  <a class="nav-link active" aria-current="page" href="discover.html">Discover</a>
+                  <a class="nav-link" href="contactus.html">Contact Us</a>
                 </div>
               </div>
         </div>
@@ -33,7 +33,7 @@
 
 
     <div class="jumbotron">
-        <h1>Contact Us</h1>
+        <h1>Discover Local</h1>
     </div>
 
     
