--- a/index.html
+++ b/index.html
@@ -23,9 +23,8 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <div class="navbar-nav">
                   <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                  <a class="nav-link" href="discover.html">Discover</a>
                   <a class="nav-link" href="contactus.html">Contact Us</a>
-                  <a class="nav-link" href="#">Pricing</a>
-                  <a class="nav-link disabled">Disabled</a>
                 </div>
               </div>
         </div>
