--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 
     <div class="jumbotron">
         <h1>Wertigo</h1>
+        <p>The local-friendly website for when you ask yourself where to go.</p>
     </div>
 
     
