--- a/discover.html
+++ b/discover.html
@@ -26,6 +26,7 @@
                   <a class="nav-link" href="index.html">Home</a>
                   <a class="nav-link active" aria-current="page" href="discover.html">Discover</a>
                   <a class="nav-link" href="contactus.html">Contact Us</a>
+                  <a class="nav-link" href="faq.html">FAQ</a>
                 </div>
               </div>
         </div>
