--- a/faq.html
+++ b/faq.html
@@ -34,23 +34,51 @@
 
 
     <div class="jumbotron">
-        <h1>Contact Us</h1>
+        <h1>FAQ</h1>
     </div>
 
     <div class="container">
         <div class="row justify-content-center">
             <div class="col">
                 <div class="centeredText">
-                    <h1>Do you own a business?</h1>
-                    <p>We want to have you join us! Please fill out the form below and we will act quickly to add your business to Wertigo.</p>
+                    <h1>What exactly is Wertigo?</h1>
+                    <p>Wertigo's mission is to provide new or existing, small to medium-sized, local businesses a chance to be discovered. We believe the first thought on your mind when trying to find a place to eat, shop, or have fun, should be to check local.
+                        <br><br>
+                        Nowadays, many independent and new businesses primarily use Instagram and other social media sites to advertise themselves, but can often get drowned out in the sea of similar names. If your name doesn't include the specific word that people are looking for, it might be impossible for them to ever find you.
+                        <br><br>
+                        This is where Wertigo tries to bridge that gap and provide a place to aggregate all the local businesses that might need an easier way of reaching new customers. You can filter by category and search by name or tags to find just the right place that meets your criteria.
+                    </p>
                 </div>
             </div>
         </div>
         <div class="row justify-content-center">
             <div class="col">
                 <div class="centeredText">
-                    <h1>Know someone else with a business?</h1>
-                    <p>If you don't own a business yourself, fill out the form below to nominate a local business!</p>
+                    <h1>Why the name Wertigo?</h1>
+                    <p>Wertigo is a play on words of "Where to go?". How many times are you with friends and trying to brainstorm ideas of where to go, but are tired of the usual chain spots? How about when you need to find a local spot to find a specific service and ask yourself where to go? Wertigo!</p>
+                </div>
+            </div>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col">
+                <div class="centeredText">
+                    <h1>Is it free to have my business on Wertigo?</h1>
+                    <p>Yes of course! Wertigo is 100% free. Any personal data provided in the sign up form is not sold anywhere and is kept confidential.</p>
+                </div>
+            </div>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col">
+                <div class="centeredText">
+                    <h1>Can I edit or remove my business from Wertigo?</h1>
+                    <p>Also, of course! If you wish to edit any details or remove your business from Wertigo, simply contact us <a href="mailto:alastony99@gmail.com">here.</a></p>
+                </div>
+            </div>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col">
+                <div class="centeredText">
+                    <br><br>
                 </div>
             </div>
         </div>
