added placeholder form on contact us page

--- a/contactus.html
+++ b/contactus.html
@@ -47,6 +47,67 @@
             </div>
         </div>
         <div class="row justify-content-center">
+            <form
+              id="contact-form"
+              method="POST"
+              action="send"
+              enctype="multipart/form-data"
+            >
+              <div class="form-group">
+                <div class="row">
+                  <div class="col-md-6">
+                    <input
+                      placeholder="Name"
+                      id="name"
+                      name="name"
+                      type="text"
+                      class="form-control"
+                      required
+                    />
+                  </div>
+                  <div class="col-md-6">
+                    <input
+                      placeholder="Email"
+                      id="email"
+                      type="email"
+                      name="email"
+                      class="form-control"
+                      aria-describedby="emailHelp"
+                      required
+                    />
+                  </div>
+                </div>
+              </div>
+              <br>
+              <div class="form-group">
+                <input
+                  placeholder="Subject"
+                  id="subject"
+                  name="subject"
+                  type="text"
+                  class="form-control"
+                  required
+                />
+              </div>
+              <br>
+              <div class="form-group">
+                <textarea
+                  placeholder="Message"
+                  id="message"
+                  name="message"
+                  class="form-control"
+                  rows="3"
+                  required
+                ></textarea>
+              </div>
+              <br>
+              <button type="submit" value="submit" class="btn btn-primary">
+                Submit
+              </button>
+            </form>
+        </div>
+
+        <div class="row justify-content-center">
             <div class="col">
                 <div class="centeredText">
                     <h1>Know someone else with a business?</h1>
@@ -54,6 +115,68 @@
                 </div>
             </div>
         </div>
+
+        <div class="row justify-content-center">
+            <form
+              id="contact-form"
+              method="POST"
+              action="send"
+              enctype="multipart/form-data"
+            >
+              <div class="form-group">
+                <div class="row">
+                  <div class="col-md-6">
+                    <input
+                      placeholder="Name"
+                      id="name"
+                      name="name"
+                      type="text"
+                      class="form-control"
+                      required
+                    />
+                  </div>
+                  <div class="col-md-6">
+                    <input
+                      placeholder="Email"
+                      id="email"
+                      type="email"
+                      name="email"
+                      class="form-control"
+                      aria-describedby="emailHelp"
+                      required
+                    />
+                  </div>
+                </div>
+              </div>
+              <br>
+              <div class="form-group">
+                <input
+                  placeholder="Subject"
+                  id="subject"
+                  name="subject"
+                  type="text"
+                  class="form-control"
+                  required
+                />
+              </div>
+              <br>
+              <div class="form-group">
+                <textarea
+                  placeholder="Message"
+                  id="message"
+                  name="message"
+                  class="form-control"
+                  rows="3"
+                  required
+                ></textarea>
+              </div>
+              <br>
+              <button type="submit" value="submit" class="btn btn-primary">
+                Submit
+              </button>
+            </form>
+        </div>
+        <br><br>
     </div>
     
     
