updated form on contact us page

--- a/contactus.html
+++ b/contactus.html
@@ -60,9 +60,9 @@
             <!-- First row of form 1 -->
               <div class="form-group">
                 <div class="row">
-                  <div class="col-md-6">
+                  <div class="col-md-4">
                     <input
-                      placeholder="Name"
+                      placeholder="Full Name"
                       id="name"
                       name="name"
                       type="text"
@@ -70,7 +70,7 @@
                       required
                     />
                   </div>
-                  <div class="col-md-6">
+                  <div class="col-md-4">
                     <input
                       placeholder="Email"
                       id="email"
@@ -78,6 +78,16 @@
                       name="email"
                       class="form-control"
                       aria-describedby="emailHelp"
+                      required
+                    />
+                  </div>
+                  <div class="col-md-4">
+                    <input
+                      placeholder="Phone Number"
+                      id="phoneNumber"
+                      type="text"
+                      name="phoneNumber"
+                      class="form-control"
                       required
                     />
                   </div>
