testing the complete form submit process (with the client side and server side part added)

--- a/contactus.html
+++ b/contactus.html
@@ -54,7 +54,7 @@
             <form
               id="owner-contact-form"
               method="POST"
-              action="send"
+              action="contactus"
               enctype="multipart/form-data"
             >
             <!-- First row of form 1 -->
