--- a/contactus.html
+++ b/contactus.html
@@ -54,7 +54,7 @@
             <form
               id="owner-contact-form"
               method="POST"
-              action="contactus"
+              action="/contactus"
               enctype="multipart/form-data"
             >
             <!-- First row of form 1 -->
