--- a/discover.html
+++ b/discover.html
@@ -5,10 +5,10 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles.css">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles.css">
 
     <title> Wertigo - Discover</title>
 </head>
@@ -50,9 +50,30 @@
                 </div>
             </div>
         </div>
+        <hr>
+        <div class="discoverDiv">
+            <div class="row justify-content-center">
+                    <div class="col-md-4 item">
+                        <h1>Test Restaurant</h1>
+                    </div>
+                    <div class="col-md-4 item">
+                        <h1>Test Business</h1>
+                    </div>
+                    <div class="col-md-4 item">
+                        <h1>Test Service</h1>
+                    </div>
+            </div>
+        </div>
     </div>
 
-
+    <!-- Footer -->
+    <footer class="page-footer">
+        <hr>
+        <div class="footer-copyright text-center py-3">© 2021 Wertigo
+        <br>
+        <a href="https://github.com/tonyalas/wertigo">Github</a>
+        </div>
+    </footer>
 
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
