--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles.css">
     <!-- Safari tab colour <meta name="theme-color" content="#1a5d8d"> -->
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles.css">
 
     <title>Wertigo</title>
 </head>
@@ -61,18 +61,77 @@
                     </div>
                 </div>
             </div>
-
+            <hr>
         </div>
+
+        <div class="centeredText">
+            <div class="indexDiv2">
+                <h1 class="getstartednow">Get Started Now</h1>
+                <a href="discover.html"><button type="button" class="btn btn-primary">Discover</button></a>
+            </div>
+        </div>
+        <hr>
+        <div class="centeredText">
+            <div class="indexDiv3">
+                <div class="row">
+                    <div class="col-md-4">
+                        <img src="purple_store.jpg" class="vector_image">
+                    </div>
+                    <div class="col-md-6">
+                        <h3>Think Local, Live Local</h3>
+                        <p class="info_text">Support your community by shopping local. Created locally with the community in mind.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="centeredText">
+            <div class="indexDiv4">
+                <div class="row">
+                    <div class="col-md-4">
+                        <img src="purple_store.jpg" class="vector_image">
+                    </div>
+                    <div class="col-md-6">
+                        <h3>What are you looking for today?</h3>
+                        <p class="info_text">Simplify the way you search for nearby businesses by filtering by category. Restaurant? Beauty Services? Something fun to do? Find them here!</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="centeredText">
+            <div class="indexDiv5">
+                <div class="row">
+                    <div class="col-md-4">
+                        <img src="purple_store.jpg" class="vector_image">
+                    </div>
+                    <div class="col-md-6">
+                        <h3>Open to all businesses!</h3>
+                        <p class="info_text">Fill out a quick form to add your business to our site at no cost! Don't see your favourite spot? Recommend a business here as well.</p>
+                        <a href="contactus.html"><button type="button" class="btn btn-primary">Register Today</button></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        
+
     </div>
 
-
-
-
+    <!-- Footer -->
+    <footer class="page-footer">
+        <hr>
+        <div class="footer-copyright text-center py-3">© 2021 Wertigo
+        <br>
+        <a href="https://github.com/tonyalas/wertigo">Github</a>
+        </div>
+    </footer>
 
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
+
 
 </body>
 
