updated homepage a little and put some examples in the discover page

--- a/discover.html
+++ b/discover.html
@@ -54,13 +54,35 @@
         <div class="discoverDiv">
             <div class="row justify-content-center">
                     <div class="col-md-4 item">
-                        <h1>Test Restaurant</h1>
+                        <h1>Chez Test</h1>
+                        <h3>Restaurant, Italian</h3>
+                        <h5><a href="tel:519-123-4567" class="phonenumber">519-123-4567</a></h5>
+                        <img class="business_image" src="test_italian.jpg" />
+                        <hr>
                     </div>
                     <div class="col-md-4 item">
-                        <h1>Test Business</h1>
+                        <h1>DeMarco's Fine Foods</h1>
+                        <h3>Grocery Store</h3>
+                        <h5><a href="tel:519-123-4567" class="phonenumber">519-123-4567</a></h5>
+                        <img class="business_image" src="demarcosfinefoods.jpeg"/>
+                        <br>
+                        <br>
+                        <img src="website_logo.png" class="linkLogos"/>
+                        <p><a href="https://www.demarcosfinefoods.com" target="_blank" rel="noopener noreferrer" class="businessLinks">Website</a></p>
+                        <img src="instagramlogo.png" class="linkLogos"/>
+                        <p><a href="https://instagram.com/demarcosfinefoods?utm_medium=copy_link" target="_blank" rel="noopener noreferrer" class="businessLinks">Instagram</a></p>
+                        <img src="pin-icon.jpeg" class="linkLogos"/>
+                        <p><a href="https://g.page/Demarcosfinefoods?share" target="_blank" rel="noopener noreferrer" class="businessLinks">1349 Grand Marais Rd W
+                            Windsor, N9E 1E2
+                            Canada</a></p>
+                        <hr>
                     </div>
                     <div class="col-md-4 item">
-                        <h1>Test Service</h1>
+                        <h1>Nail Salon</h1>
+                        <h3>Beauty</h3>
+                        <h5><a href="tel:519-123-4567" class="phonenumber">519-123-4567</a></h5>
+                        <img class="business_image" src="nail-salon.jpeg"/>
+                        <hr>
                     </div>
             </div>
         </div>
