--- a/discover.html
+++ b/discover.html
@@ -5,6 +5,15 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#30343e">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -57,21 +66,21 @@
                         <h1>Chez Test</h1>
                         <h3>Restaurant, Italian</h3>
                         <h5><a href="tel:519-123-4567" class="phonenumber">519-123-4567</a></h5>
-                        <img class="business_image" src="test_italian.jpg" />
+                        <img class="business_image" src="static/test_italian.jpg" />
                         <hr>
                     </div>
                     <div class="col-md-4 item">
                         <h1>DeMarco's Fine Foods</h1>
                         <h3>Grocery Store</h3>
                         <h5><a href="tel:519-123-4567" class="phonenumber">519-123-4567</a></h5>
-                        <img class="business_image" src="demarcosfinefoods.jpeg"/>
+                        <img class="business_image" src="static/demarcosfinefoods.jpeg"/>
                         <br>
                         <br>
-                        <img src="website_logo.png" class="linkLogos"/>
+                        <img src="static/website_logo.png" class="linkLogos"/>
                         <p><a href="https://www.demarcosfinefoods.com" target="_blank" rel="noopener noreferrer" class="businessLinks">Website</a></p>
-                        <img src="instagramlogo.png" class="linkLogos"/>
+                        <img src="static/instagramlogo.png" class="linkLogos"/>
                         <p><a href="https://instagram.com/demarcosfinefoods?utm_medium=copy_link" target="_blank" rel="noopener noreferrer" class="businessLinks">Instagram</a></p>
-                        <img src="pin-icon.jpeg" class="linkLogos"/>
+                        <img src="static/pin-icon.jpeg" class="linkLogos"/>
                         <p><a href="https://g.page/Demarcosfinefoods?share" target="_blank" rel="noopener noreferrer" class="businessLinks">1349 Grand Marais Rd W
                             Windsor, N9E 1E2
                             Canada</a></p>
@@ -81,7 +90,7 @@
                         <h1>Nail Salon</h1>
                         <h3>Beauty</h3>
                         <h5><a href="tel:519-123-4567" class="phonenumber">519-123-4567</a></h5>
-                        <img class="business_image" src="nail-salon.jpeg"/>
+                        <img class="business_image" src="static/nail-salon.jpeg"/>
                         <hr>
                     </div>
             </div>
