--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#30343e">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
     <!-- Safari tab colour <meta name="theme-color" content="#1a5d8d"> -->
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -75,7 +83,7 @@
             <div class="indexDiv3">
                 <div class="row">
                     <div class="col-md-4">
-                        <img src="purple_store.jpg" class="vector_image">
+                        <img src="static/community-pic.jpg" class="vector_image">
                     </div>
                     <div class="col-md-6">
                         <h3>Think Local, Live Local</h3>
@@ -89,7 +97,7 @@
             <div class="indexDiv4">
                 <div class="row">
                     <div class="col-md-4">
-                        <img src="purple_store.jpg" class="vector_image">
+                        <img src="static/search.jpg" class="vector_image">
                     </div>
                     <div class="col-md-6">
                         <h3>What are you looking for today?</h3>
@@ -103,7 +111,7 @@
             <div class="indexDiv5">
                 <div class="row">
                     <div class="col-md-4">
-                        <img src="purple_store.jpg" class="vector_image">
+                        <img src="static/shopping-center.jpg" class="vector_image">
                     </div>
                     <div class="col-md-6">
                         <h3>Open to all businesses!</h3>
