--- a/public/discover.html
+++ b/public/discover.html
@@ -16,7 +16,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
 
     <title> Wertigo - Discover</title>
 </head>
@@ -65,21 +65,21 @@
                         <h1>Chez Test</h1>
                         <h3>Restaurant, Italian</h3>
                         <h5><a href="tel:519-123-4567" class="phonenumber">519-123-4567</a></h5>
-                        <img class="business_image" src="static/test_italian.jpg" />
+                        <img class="business_image" src="/images/test_italian.jpg" />
                         <hr>
                     </div>
                     <div class="col-md-4 item">
                         <h1>DeMarco's Fine Foods</h1>
                         <h3>Grocery Store</h3>
                         <h5><a href="tel:519-123-4567" class="phonenumber">519-123-4567</a></h5>
-                        <img class="business_image" src="static/demarcosfinefoods.jpeg"/>
+                        <img class="business_image" src="/images/demarcosfinefoods.jpeg"/>
                         <br>
                         <br>
-                        <img src="static/website_logo.png" class="linkLogos"/>
+                        <img src="/images/website_logo.png" class="linkLogos"/>
                         <p><a href="https://www.demarcosfinefoods.com" target="_blank" rel="noopener noreferrer" class="businessLinks">Website</a></p>
-                        <img src="static/instagramlogo.png" class="linkLogos"/>
+                        <img src="/images/instagramlogo.png" class="linkLogos"/>
                         <p><a href="https://instagram.com/demarcosfinefoods?utm_medium=copy_link" target="_blank" rel="noopener noreferrer" class="businessLinks">Instagram</a></p>
-                        <img src="static/pin-icon.jpeg" class="linkLogos"/>
+                        <img src="/images/pin-icon.jpeg" class="linkLogos"/>
                         <p><a href="https://g.page/Demarcosfinefoods?share" target="_blank" rel="noopener noreferrer" class="businessLinks">1349 Grand Marais Rd W
                             Windsor, N9E 1E2
                             Canada</a></p>
@@ -89,7 +89,7 @@
                         <h1>Nail Salon</h1>
                         <h3>Beauty</h3>
                         <h5><a href="tel:519-123-4567" class="phonenumber">519-123-4567</a></h5>
-                        <img class="business_image" src="static/nail-salon.jpeg"/>
+                        <img class="business_image" src="/images/nail-salon.jpeg"/>
                         <hr>
                     </div>
             </div>
