--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
 
     <title>Wertigo</title>
 </head>
@@ -33,10 +33,10 @@
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <div class="navbar-nav">
-                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                    <a class="nav-link" href="discover.html">Discover</a>
-                    <a class="nav-link" href="contactus.html">Contact Us</a>
-                    <a class="nav-link" href="faq.html">FAQ</a>
+                    <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
+                    <a class="nav-link" href="/discover.html">Discover</a>
+                    <a class="nav-link" href="/contactus.html">Contact Us</a>
+                    <a class="nav-link" href="/faq.html">FAQ</a>
                 </div>
             </div>
         </div>
@@ -80,7 +80,7 @@
             <div class="indexDiv3">
                 <div class="row">
                     <div class="col-md-4">
-                        <img src="static/community-pic.jpg" class="vector_image">
+                        <img src="/images/community-pic.jpg" class="vector_image">
                     </div>
                     <div class="col-md-6">
                         <h3>Think Local, Live Local</h3>
@@ -94,7 +94,7 @@
             <div class="indexDiv4">
                 <div class="row">
                     <div class="col-md-4">
-                        <img src="static/search.jpg" class="vector_image">
+                        <img src="/images//search.jpg" class="vector_image">
                     </div>
                     <div class="col-md-6">
                         <h3>What are you looking for today?</h3>
@@ -108,7 +108,7 @@
             <div class="indexDiv5">
                 <div class="row">
                     <div class="col-md-4">
-                        <img src="static/shopping-center.jpg" class="vector_image">
+                        <img src="/images/shopping-center.jpg" class="vector_image">
                     </div>
                     <div class="col-md-6">
                         <h3>Open to all businesses!</h3>
