changed the way the program is set up and made it use nodejs properly instead of just using the serve command

--- a/public/contactus.html
+++ b/public/contactus.html
@@ -245,7 +245,7 @@
         crossorigin="anonymous"></script>
 
     <!-- this script will get the client-side function to work -->
-    <script src="./server.js"></script>
+    <script src="server.js"></script>
 
 </body>
 
