--- a/public/contactus.html
+++ b/public/contactus.html
@@ -110,8 +110,8 @@
                         <br>
                         <br>
                         <div class="col-md-4">
-                            <input placeholder="Subcategory (ex: Cafe, Chinese food, Service type)" id="businessName"
-                                name="businessName" type="text" class="form-control"/>
+                            <input placeholder="Subcategory (ex: Cafe, Chinese food, Service type)" id="businessSubcategory"
+                                name="businessSubcategory" type="text" class="form-control"/>
                         </div>
                     </div>
                 </div>
@@ -126,7 +126,7 @@
                         <br>
                         <br>
                         <div class="col-md-4">
-                            <input placeholder="Instagram Account URL" id="instagramName" name="instagramName"
+                            <input placeholder="Instagram Account @ Name" id="instagramName" name="instagramName"
                                 type="text" class="form-control" />
                         </div>
                         <br>
