updated the Discover page. Added the foundation for the filtering aspect

--- a/public/contactus.html
+++ b/public/contactus.html
@@ -101,7 +101,7 @@
                                 required>
                                 <option>-Select a Business Category- *</option>
                                 <option>Restaurant</option>
-                                <option>Self Care/Aesthetics</option>
+                                <option>Beauty</option>
                                 <option>Shopping</option>
                                 <option>Accessories</option>
                                 <option>Entertainment</option>
