updated contact us page, faq page and changed the business address pin-logo

--- a/public/contactus.html
+++ b/public/contactus.html
@@ -178,7 +178,7 @@
             <div class="col">
                 <div class="centeredText">
                     <h1>Know someone else with a business?</h1>
-                    <p>If you don't own a business yourself, fill out the form below to nominate a local business!</p>
+                    <p>If you don't own a business yourself, fill out the form below to recommend a local business!</p>
                 </div>
             </div>
         </div>
@@ -220,6 +220,8 @@
             </form>
         </div>
         <br><br>
+
+        <p>Forms above not working or have a general inquiry? You can also email us <a href="mailto:wertigosupport@gmail.com">here</a>.</p>
     </div>
 
     <!-- Footer -->
