--- a/public/discover.html
+++ b/public/discover.html
@@ -123,7 +123,7 @@
                         <br>
 
                         <div class="businessLinkPic">
-                            <img src="/images/pin-icon.jpeg" class="linkLogos"/>
+                            <img src="/images/pin-icon.png" class="linkLogos"/>
                             <div class="businessLinkText">
                                 <p><a href="https://g.page/Demarcosfinefoods?share" target="_blank" rel="noopener noreferrer" class="businessLinks">1349 Grand Marais Rd W,
                                     Windsor, N9E 1E2</a></p>
