--- a/public/faq.html
+++ b/public/faq.html
@@ -85,7 +85,7 @@
             <div class="col">
                 <div class="centeredText">
                     <h1>Is it free to have my business on Wertigo?</h1>
-                    <p>Yes of course! Wertigo is 100% free. Any personal data provided in the sign up form is not sold
+                    <p>Yes, of course! Wertigo is 100% free. Any personal data provided in the sign up form is not sold
                         anywhere and is kept confidential.</p>
                 </div>
             </div>
@@ -94,8 +94,8 @@
             <div class="col">
                 <div class="centeredText">
                     <h1>Can I edit or remove my business from Wertigo?</h1>
-                    <p>Also, of course! If you wish to edit any details or remove your business from Wertigo, simply
-                        contact us <a href="mailto:alastony99@gmail.com">here.</a></p>
+                    <p>Also of course! If you wish to edit any details or remove your business from Wertigo, simply
+                        fill out the first form on the <a href="contactus.html">Contact Us</a> page or email us <a href="mailto:wertigosupport@gmail.com">here.</a></p>
                 </div>
             </div>
         </div>
