updated second paragraph on index page

--- a/public/index.html
+++ b/public/index.html
@@ -98,7 +98,7 @@
                     </div>
                     <div class="col-md-6">
                         <h3>What are you looking for today?</h3>
-                        <p class="info_text">Simplify the way you search for nearby businesses by filtering by category. Restaurant? Beauty Services? Something fun to do? Find them here!</p>
+                        <p class="info_text">Simplify the way you search for nearby businesses. Restaurant? Beauty Services? Something fun to do? Find them here!</p>
                     </div>
                 </div>
             </div>
