added a coming soon message on home page, added page links to footer, updated favicon

--- a/public/contactus.html
+++ b/public/contactus.html
@@ -228,8 +228,15 @@
     <footer class="page-footer">
         <hr>
         <div class="footer-copyright text-center py-3">© 2021 Wertigo
-        <br>
-        <a href="https://github.com/tonyalas/wertigo">Github</a>
+            <br>
+            <br>
+            <a href="index.html" id="footer-links">Home</a>
+            <a href="discover.html" id="footer-links">Discover</a>
+            <a href="contactus.html" id="footer-links">Contact Us</a>
+            <a href="faq.html" id="footer-links">FAQ</a>
+            <br>
+            <br>
+            <a href="https://github.com/tonyalas/wertigo" id="footer-links">Github</a>
         </div>
     </footer>
 
