--- a/public/faq.html
+++ b/public/faq.html
@@ -55,19 +55,21 @@
             <div class="col">
                 <div class="centeredText">
                     <h1>What exactly is Wertigo?</h1>
-                    <p>Wertigo's mission is to provide new or existing, small to medium-sized, local businesses a chance
-                        to be discovered. We believe the first thought on your mind when trying to find a place to eat,
-                        shop, or have fun, should be to check local.
-                        <br><br>
-                        Nowadays, many independent and new businesses primarily use Instagram and other social media
-                        sites to advertise themselves, but can often get drowned out in the sea of similar names. If
-                        your name doesn't include the specific word that people are looking for, it might be impossible
-                        for them to ever find you.
-                        <br><br>
-                        This is where Wertigo tries to bridge that gap and provide a place to aggregate all the local
-                        businesses that might need an easier way of reaching new customers. You can filter by category
-                        and search by name or tags to find just the right place that meets your criteria.
-                    </p>
+                    <div class="block-text">
+                        <p>Wertigo's mission is to provide new or existing, small to medium-sized, local businesses a chance
+                            to be discovered. We believe the first thought on your mind when trying to find a place to eat,
+                            shop, or have fun, should be to check local.
+                            <br><br>
+                            Nowadays, many independent and new businesses primarily use Instagram and other social media
+                            sites to advertise themselves, but can often get drowned out in the sea of similar names. If
+                            your name doesn't include the specific word that people are looking for, it might be impossible
+                            for them to ever find you.
+                            <br><br>
+                            This is where Wertigo tries to bridge that gap and provide a place to aggregate all the local
+                            businesses that might need an easier way of reaching new customers. You can filter by category
+                            and search by name or tags to find just the right place that meets your criteria.
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -75,9 +77,11 @@
             <div class="col">
                 <div class="centeredText">
                     <h1>Why the name Wertigo?</h1>
-                    <p>Wertigo is a play on words of "Where to go?". How many times are you with friends and trying to
-                        brainstorm ideas of where to go, but are tired of the usual chain spots? How about when you need
-                        to find a local spot to find a specific service and ask yourself where to go? Wertigo!</p>
+                    <div class="block-text">
+                        <p>Wertigo is a play on words of "Where to go?". How many times are you with friends and trying to
+                            brainstorm ideas of where to go, but are tired of the usual chain spots? How about when you need
+                            to find a local spot to find a specific service and ask yourself where to go? Wertigo!</p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -85,8 +89,10 @@
             <div class="col">
                 <div class="centeredText">
                     <h1>Is it free to have my business on Wertigo?</h1>
-                    <p>Yes, of course! Wertigo is 100% free. Any personal data provided in the sign up form is not sold
-                        anywhere and is kept confidential.</p>
+                    <div class="block-text">
+                        <p>Yes, of course! Wertigo is 100% free. Any personal data provided in the sign up form is not sold
+                            anywhere and is kept confidential.</p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -94,8 +100,10 @@
             <div class="col">
                 <div class="centeredText">
                     <h1>Can I edit or remove my business from Wertigo?</h1>
-                    <p>Also of course! If you wish to edit any details or remove your business from Wertigo, simply
-                        fill out the first form on the <a href="contactus.html">Contact Us</a> page or email us <a href="mailto:wertigosupport@gmail.com">here.</a></p>
+                    <div class="block-text">
+                        <p>Also of course! If you wish to edit any details or remove your business from Wertigo, simply
+                            fill out the first form on the <a href="contactus.html">Contact Us</a> page or email us <a href="mailto:wertigosupport@gmail.com">here.</a></p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -112,8 +120,15 @@
     <footer class="page-footer">
         <hr>
         <div class="footer-copyright text-center py-3">© 2021 Wertigo
-        <br>
-        <a href="https://github.com/tonyalas/wertigo">Github</a>
+            <br>
+            <br>
+            <a href="index.html" id="footer-links">Home</a>
+            <a href="discover.html" id="footer-links">Discover</a>
+            <a href="contactus.html" id="footer-links">Contact Us</a>
+            <a href="faq.html" id="footer-links">FAQ</a>
+            <br>
+            <br>
+            <a href="https://github.com/tonyalas/wertigo" id="footer-links">Github</a>
         </div>
     </footer>
 
