--- a/public/index.html
+++ b/public/index.html
@@ -46,6 +46,7 @@
     <div class="jumbotron">
         <h1>Wertigo</h1>
         <p>The local-friendly website for when you ask yourself where to go.</p>
+        <h4>Coming soon in 2022!</h4>
     </div>
 
     <div class="container">
@@ -127,8 +128,15 @@
     <footer class="page-footer">
         <hr>
         <div class="footer-copyright text-center py-3">© 2021 Wertigo
-        <br>
-        <a href="https://github.com/tonyalas/wertigo">Github</a>
+            <br>
+            <br>
+            <a href="index.html" id="footer-links">Home</a>
+            <a href="discover.html" id="footer-links">Discover</a>
+            <a href="contactus.html" id="footer-links">Contact Us</a>
+            <a href="faq.html" id="footer-links">FAQ</a>
+            <br>
+            <br>
+            <a href="https://github.com/tonyalas/wertigo" id="footer-links">Github</a>
         </div>
     </footer>
 
