--- a/public/discover.html
+++ b/public/discover.html
@@ -55,6 +55,8 @@
             <div class="col">
                 <div class="centeredText">
                     <h1>Get started on discovering great local businesses!</h1>
+                    <br>
+                    <h4 id="UnderConstruction">This page is still under construction!</h4>
                 </div>
             </div>
         </div>
@@ -101,11 +103,40 @@
         <div class="discoverDiv">
             <div class="row justify-content-center">
                     <div class="col-md-4 item">
-                        <h1>Chez Test</h1>
-                        <h3>Restaurant</h3>
-                        <h4>Italian</h4>
-                        <h5><a href="tel:519-123-4567" class="phonenumber">519-123-4567</a></h5>
-                        <img class="business_image" src="/images/test_italian.jpg" />
+                        <h1>Nancy Johns Gallery</h1>
+                        <h3>Shopping</h3>
+                        <h4>Framing and Art</h4>
+                        <h5><a href="tel:519-945-2222" class="phonenumber">519-945-2222</a></h5>
+                        <img class="business_image" src="/images/nancyjohnsgallery.jpg" />
+                        <br>
+                        <br>
+
+                        <!-- Website Link -->
+                        <div class="businessLinkPic">
+                            <img src="/images/website_logo.png" class="linkLogos"/>
+                            <div class="businessLinkText">
+                                <p><a href="https://www.nancyjohns.com" target="_blank" rel="noopener noreferrer" class="businessLinks">Website</a></p>
+                            </div>
+                        </div>
+                        <br>
+
+                        <!-- Instagram Section -->
+                        <div class="businessLinkPic">
+                            <img src="/images/instagramlogo.png" class="linkLogos"/>
+                            <div class="businessLinkText">
+                                <p><a href="https://www.instagram.com/nancyjohnsgallery/" target="_blank" rel="noopener noreferrer" class="businessLinks">@nancyjohnsgallery</a></p>
+                            </div>
+                        </div>
+
+                        <!-- Business Address -->
+                        <div class="businessLinkPic">
+                            <img src="/images/pin-icon.png" class="linkLogos"/>
+                            <div class="businessLinkText">
+                                <p><a href="https://maps.apple.com/?address=4755%20Wyandotte%20St%20E,%20Windsor%20ON%20N8Y%201H8,%20Canada&auid=1736470343631369272&ll=42.326220,-82.979521&lsp=9902&q=Nancy%20Johns%20Gallery%20%26%20Framing&_ext=CjIKBAgEEGIKBAgFEAMKBQgGEIUBCgQIChAACgQIUhACCgQIVRAPCgQIWRACCgUIpAEQARImKXm9RWIuKUVAMTi9owAUv1TAOfeSa75UKkVAQdijs+1MvlTAUAM%3D" target="_blank" rel="noopener noreferrer" class="businessLinks">4755 Wyandotte St E,
+                                    Windsor ON, N8Y 1H8</a></p>
+                            </div>
+                        </div>
+
                         <hr>
                     </div>
                     <!-- * This is what a complete div will look like for a single business object -->
@@ -118,6 +149,7 @@
                         <br>
                         <br>
 
+                        <!-- Website Link -->
                         <div class="businessLinkPic">
                             <img src="/images/website_logo.png" class="linkLogos"/>
                             <div class="businessLinkText">
@@ -126,30 +158,51 @@
                         </div>
                         <br>
 
+                        <!-- Instagram Link -->
                         <div class="businessLinkPic">
                             <img src="/images/instagramlogo.png" class="linkLogos"/>
                             <div class="businessLinkText">
-                                <p><a href="https://instagram.com/demarcosfinefoods?utm_medium=copy_link" target="_blank" rel="noopener noreferrer" class="businessLinks">@demarcosfinefoods</a></p>
+                                <p><a href="https://www.instagram.com/demarcosfinefoods/" target="_blank" rel="noopener noreferrer" class="businessLinks">@demarcosfinefoods</a></p>
                             </div>
                         </div>
                         <br>
 
+                        <!-- Business Address -->
                         <div class="businessLinkPic">
                             <img src="/images/pin-icon.png" class="linkLogos"/>
                             <div class="businessLinkText">
                                 <p><a href="https://g.page/Demarcosfinefoods?share" target="_blank" rel="noopener noreferrer" class="businessLinks">1349 Grand Marais Rd W,
-                                    Windsor, N9E 1E2</a></p>
+                                    Windsor ON, N9E 1E2</a></p>
                             </div>
                         </div>
 
                         <hr>
                     </div>
+
                     <div class="col-md-4 item">
-                        <h1>Nail Salon</h1>
-                        <h3>Beauty</h3>
-                        <h5><a href="tel:519-123-4567" class="phonenumber">519-123-4567</a></h5>
-                        <img class="business_image" src="/images/nail-salon.jpeg"/>
+                        <h1>Bella Armande Jewelry</h1>
+                        <h3>Accessories</h3>
+                        <h4>Jewelry</h4>
+                        <img class="business_image" src="/images/bellaarmande.jpg"/>
                         <hr>
+
+                        <!-- Website Link -->
+                        <div class="businessLinkPic">
+                            <img src="/images/website_logo.png" class="linkLogos"/>
+                            <div class="businessLinkText">
+                                <p><a href="https://www.etsy.com/ca/shop/BellaArmandeJewelry" target="_blank" rel="noopener noreferrer" class="businessLinks">Etsy</a></p>
+                            </div>
+                        </div>
+                        <br>
+
+                        <!-- Instagram Link -->
+                        <div class="businessLinkPic">
+                            <img src="/images/instagramlogo.png" class="linkLogos"/>
+                            <div class="businessLinkText">
+                                <p><a href="https://www.instagram.com/bellaarmandejewelry/" target="_blank" rel="noopener noreferrer" class="businessLinks">@bellaarmandejewelry</a></p>
+                            </div>
+                        </div>
+
                     </div>
             </div>
         </div>
