updated contact us page to no longer make address required and added an other option in for category

--- a/public/contactus.html
+++ b/public/contactus.html
@@ -105,12 +105,13 @@
                                 <option>Shopping</option>
                                 <option>Accessories</option>
                                 <option>Entertainment</option>
+                                <option>Other (please specify)</option>
                             </select>
                         </div>
                         <br>
                         <br>
                         <div class="col-md-4">
-                            <input placeholder="Subcategory (ex: Cafe, Chinese food, Service type)" id="businessSubcategory"
+                            <input placeholder="Subcategory (ex: Cafe, Gifts, Nails, etc.)" id="businessSubcategory"
                                 name="businessSubcategory" type="text" class="form-control"/>
                         </div>
                     </div>
@@ -142,25 +143,23 @@
                 <div class="form-group">
                     <div class="row">
                         <div class="col-md-4">
-                            <input placeholder="Address*" id="address" name="address" type="text" class="form-control"
-                                required />
+                            <input placeholder="Address" id="address" name="address" type="text" class="form-control"/>
                         </div>
                         <br>
                         <br>
                         <div class="col-md-4">
-                            <input placeholder="City*" id="city" name="city" type="text" class="form-control" required />
+                            <input placeholder="City" id="city" name="city" type="text" class="form-control"/>
                         </div>
                         <br>
                         <br>
                         <div class="col-md-4">
-                            <input placeholder="Zip Code*" id="zipCode" name="zipCode" type="text" class="form-control"
-                                required />
+                            <input placeholder="Zip Code" id="zipCode" name="zipCode" type="text" class="form-control"/>
                         </div>
                     </div>
                 </div>
                 <br>
                 <div class="form-group">
-                    <textarea placeholder="Have other information to let us know? Leave your message here." id="message"
+                    <textarea placeholder="Have other information to let us know? Leave your message here. Address is only required if you have a physical storefront." id="message"
                         name="message" class="form-control" rows="3"></textarea>
                 </div>
                 <br>
